# policy_data

./: .env.example  .gitignore  Dockerfile  Procfile  celery_app.py  config.py  main.py  pyproject.toml  requirements.txt  scheduler.py
api/: routes.py  test_sync.py  webhooks.py
auth/: credential_vault.py  session_store.py  twilio_otp.py
browser/: browserbase.py
claude/: action_executor.py  computer_use.py
claude/prompts/: aia.txt  clearview.txt  metlife.txt  mlc.txt  resolution.txt  tal.txt  zurich.txt
portals/: aia.py  aia_login.py  base.py  clearview.py  metlife.py  mlc.py  resolution.py  tal.py  zurich.py
tests/: test_otp.py  test_portal_base.py  test_session_store.py
workers/: alerts.py  crm_writer.py  session_manager.py  sync_worker.py
