[project]
name = "axis-policy-sync"
version = "0.1.0"
description = "Background service that syncs insurer portal policy data to Axis CRM"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "celery[redis]>=5.4",
    "redis>=5.2",
    "playwright>=1.49",
    "anthropic>=0.45",
    "boto3>=1.35",
    "twilio>=9.4",
    "httpx>=0.28",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "fakeredis>=2.26",
    "respx>=0.22",
]

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.backends._legacy:_Backend"
